apps/proxmox/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: 8096
  type: ClusterIP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin
  labels:
    kubernetes.io/service-name: jellyfin
    endpointslice.kubernetes.io/managed-by: fluxcd
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.183
    conditions:
      ready: true
ports:
  - name: http
    port: 8096
    protocol: TCP
